--- a/user/src/system/Makefile
+++ b/user/src/system/Makefile
@@ -2,10 +2,7 @@
 # Betakit
 # Author:	Sunil Beta <betasam@gmail.com>
 # Description:	Beta's toolkit to simplify linux userspace apps.
-#
-
-#
-# Copyright (c) 2005-2008 Sunil Beta Baskar <betasam@gmail.com>
+# Copyright (c) 2005-2012 Sunil Beta Baskar <betasam@gmail.com>
 #
 
 all: libbsys
@@ -15,24 +12,24 @@ DHRYSTONE_OBJS := dhry_timers.o dhrystone.o
 WHETSTONE_SRCS := dhry_timers.c whetstone.c
 WHETSTONE_OBJS := whetstone.o
 
-SYSTEM_SRCS := memory.c 
-INTERNAL_OBJS := memory.o 
+SYSTEM_SRCS    := memory.c 
+INTERNAL_OBJS  := memory.o 
 
 # Dhrystone Support
-SYSTEM_SRCS += $(DHRYSTONE_SRCS)
-INTERNAL_OBJS += $(DHRYSTONE_OBJS)
+SYSTEM_SRCS    += $(DHRYSTONE_SRCS)
+INTERNAL_OBJS  += $(DHRYSTONE_OBJS)
 
 # Whetstone Support
-SYSTEM_SRCS += $(WHETSTONE_SRCS)
-INTERNAL_OBJS += $(WHETSTONE_OBJS)
+SYSTEM_SRCS    += $(WHETSTONE_SRCS)
+INTERNAL_OBJS  += $(WHETSTONE_OBJS)
 
 
-SYSTEM_OBJS := $(shell for f in $(INTERNAL_OBJS); do echo $(TOP_DIR)/$(OBJ_DIR)/$$f; done)
+SYSTEM_OBJS    := $(shell for f in $(INTERNAL_OBJS); do $(ECHO) $(TOP_DIR)/$(OBJ_DIR)/$$f; done)
 
-SYSTEM_LIB := libbsys.so
+SYSTEM_LIB     := libbsys.so
 
 $(INTERNAL_OBJS): $(SYSTEM_SRCS)
-	$(CC) $(CFLAGS) $(LIBFLAGS) $(INCLUDES) -c $(shell echo $@ | sed "s/\.o/\.c/") -o $(TOP_DIR)/$(OBJ_DIR)/$@
+	$(CC) $(CFLAGS) $(LIBFLAGS) $(INCLUDES) -c $(shell $(ECHO) $@ | $(SED) "s/\.o/\.c/") -o $(TOP_DIR)/$(OBJ_DIR)/$@
 
 
 libbsys: $(INTERNAL_OBJS)
@@ -44,9 +41,9 @@ libbsys: $(INTERNAL_OBJS)
 	 $(TOP_DIR)/$(LIB_DIR)/$(SYSTEM_LIB)
 
 clean: 
-	@rm -f $(SYSTEM_OBJS)
-	@rm -f $(TOP_DIR)/$(LIB_DIR)/$(SYSTEM_LIB).$(VERSION).$(SUBVERSION)
-	@rm -f $(TOP_DIR)/$(LIB_DIR)/$(SYSTEM_LIB).$(VERSION)
-	@rm -f $(TOP_DIR)/$(LIB_DIR)/$(SYSTEM_LIB)
+	@$(RM) -f $(SYSTEM_OBJS)
+	@$(RM) -f $(TOP_DIR)/$(LIB_DIR)/$(SYSTEM_LIB).$(VERSION).$(SUBVERSION)
+	@$(RM) -f $(TOP_DIR)/$(LIB_DIR)/$(SYSTEM_LIB).$(VERSION)
+	@$(RM) -f $(TOP_DIR)/$(LIB_DIR)/$(SYSTEM_LIB)
 
 .PHONY: all clean libbsys
