updates to header, minor changes

--- a/user/src/ui/Makefile
+++ b/user/src/ui/Makefile
@@ -2,10 +2,7 @@
 # Betakit
 # Author:	Sunil Beta <betasam@gmail.com>
 # Description:	Beta's toolkit to simplify linux userspace apps.
-#
-
-#
-# Copyright (c) 2005-2008 Sunil Beta Baskar <betasam@gmail.com>
+# Copyright (c) 2005-2012 Sunil Beta Baskar <betasam@gmail.com>
 #
 
 
@@ -19,22 +16,22 @@ UI_LIB = libbui.so
 all: libbui
 
 $(INTERNAL_OBJS): $(UI_SRCS)
-	$(Q)$(CC) $(CFLAGS) $(LIBFLAGS) $(INCLUDES) -c $(shell echo $@ | sed s/\.o/\.c/) -o $(TOP_DIR)/$(OBJ_DIR)/$@
+	$(CC) $(CFLAGS) $(LIBFLAGS) $(INCLUDES) -c $(shell echo $@ | sed s/\.o/\.c/) -o $(TOP_DIR)/$(OBJ_DIR)/$@
 
 
 libbui: $(INTERNAL_OBJS)
-	$(Q)$(CC) $(SHAREDLIB) -Wl,-soname,$(UI_LIB).$(VERSION) \
+	@$(CC) $(SHAREDLIB) -Wl,-soname,$(UI_LIB).$(VERSION) \
 	 -o $(TOP_DIR)/$(LIB_DIR)/$(UI_LIB).$(VERSION).$(SUBVERSION) $(UI_OBJS)
-	$(Q)$(LN) -snf $(TOP_DIR)/$(LIB_DIR)/$(UI_LIB).$(VERSION).$(SUBVERSION) \
+	@$(LN) -snf $(TOP_DIR)/$(LIB_DIR)/$(UI_LIB).$(VERSION).$(SUBVERSION) \
 	 $(TOP_DIR)/$(LIB_DIR)/$(UI_LIB).$(VERSION)
-	$(Q)$(LN) -snf $(TOP_DIR)/$(LIB_DIR)/$(UI_LIB).$(VERSION).$(SUBVERSION) \
+	@$(LN) -snf $(TOP_DIR)/$(LIB_DIR)/$(UI_LIB).$(VERSION).$(SUBVERSION) \
 	 $(TOP_DIR)/$(LIB_DIR)/$(UI_LIB)
 
 clean: 
-	$(Q)rm -f $(UI_OBJS)
-	$(Q)rm -f $(TOP_DIR)/$(LIB_DIR)/$(UI_LIB).$(VERSION).$(SUBVERSION)
-	$(Q)rm -f $(TOP_DIR)/$(LIB_DIR)/$(UI_LIB).$(VERSION)
-	$(Q)rm -f $(TOP_DIR)/$(LIB_DIR)/$(UI_LIB)
+	@$(RM} -f $(UI_OBJS)
+	@$(RM) -f $(TOP_DIR)/$(LIB_DIR)/$(UI_LIB).$(VERSION).$(SUBVERSION)
+	@$(RM) -f $(TOP_DIR)/$(LIB_DIR)/$(UI_LIB).$(VERSION)
+	@$(RM) -f $(TOP_DIR)/$(LIB_DIR)/$(UI_LIB)
 
 
 .PHONY: all clean $(UI_OBJS) libbui
