updates with more examples

--- a/user/Makefile
+++ b/user/Makefile
@@ -1,23 +1,49 @@
 #
 # Betakit
 # Author:	Sunil Beta <betasam@gmail.com>
-# Description:	Beta's toolkit to simplify linux userspace apps.
+# Description:	Beta's toolkit to build simple userspace apps
+#		on linux and unix-like platforms.
 # Copyright (c) 2005-2012 Sunil Beta Baskar <betasam@gmail.com>
 #
 # CHANGELOG
-#	8-DEC-2010	Fixed make -C issue
+#	22-DEC-2010	Added DEBUG option for Makefile
+#	17-DEC-2010	Checked and updated for cross-compiling#
+#	08-DEC-2010	Fixed make -C issue
 #
 # example:
 #	$ make NOAUTO=1 all
+# (or)	$ make ARCH=arm CROSS=arm-linux-gnueabi- all
+# (or)	$ make clean
+# (or)	$ make -k
 # (or)  $ make all
+# (or)  $ make DEBUG=1 all
+# (or)  $ make all -- 1> build.log 2> build.err
+#
 
+#
+# Before every CVS commit, please make sure you:
+# $ make clean
+# $ make mrproper
+#
 
-# toolchain
+# toolchain and architecture
 ARCH  =
 CROSS =
+ifeq ($(ARCH),"arm")
+BINPREFIX = arm-
+endif
+ifeq ($(ARCH),"mips")
+BINPREFIX = mips-
+endif
+ifeq ($(ARCH),"xscale")
+BINPREFIX = xscale-
+endif
+
+BINPREFIX = 
 CC    = $(CROSS)gcc
 AR    = $(CROSS)ar
 LD    = $(CROSS)ld
+STRIP = $(CROSS)strip
 
 ifeq ($(NOAUTO),1)
 # system tools
@@ -30,6 +56,7 @@ FIND    = find
 XARGS   = xargs
 ECHO    = echo
 SED     = sed
+GREP    = grep
 else
 # system tools from environment
 LN      = $(shell which ln)
@@ -41,6 +68,7 @@ FIND    = $(shell which find)
 XARGS   = $(shell which xargs)
 ECHO    = $(shell which echo)
 SED     = $(shell which sed)
+GREP    = $(shell which grep)
 endif
 
 # directories
@@ -66,6 +94,10 @@ MAKE_FLAGS := -j1
 CTAGS_OPTS = -f $(TAGSFILE) -e -a
 PDF_TARGET := pdf
 
+ifeq ($(DEBUG),1)
+CFLAGS = -O0 -g -Wall
+endif
+
 # version information
 VERSION = 1
 SUBVERSION =0.2
@@ -73,20 +105,24 @@ SUBVERSION =0.2
 # for all subdirectory makefiles
 export CC AR INCLUDES INCLUDE_DIR SRC_SUBDIRS OBJ_DIR BIN_DIR TOP_DIR CFLAGS SRC_DIR
 export LIB_DIR LIBFLAGS SHAREDLIB VERSION SUBVERSION LN LDFLAGS RM MKDIR FIND
-export ECHO SED
+export ECHO SED BINPREFIX STRIP
 
 # targets
-all: $(SRC_SUBDIRS)
+all: $(SRC_SUBDIRS) tags
 
 clean: 
 	for D in $(SRC_SUBDIRS); do \
-	 $(MAKE) -C $(TOP_DIR)/$(SRC_DIR)/$$D clean; \
+	 $(MAKE) $(MAKE_FLAGS) -C $(TOP_DIR)/$(SRC_DIR)/$$D clean; \
 	done
 	if [ -d $(TOP_DIR)/$(DOC_DIR)/ ]; then \
 	 $(RM) -rf $(TOP_DIR)/$(DOC_DIR)/*; \
+	 $(RM) -f $(TOP_DIR)/$(BIN_DIR)/*; \
 	 $(RM) -f $(TAGSFILE); \
 	 $(RM) -f $(TOP_DIR)/tags; \
 	fi 
+
+mrproper: clean
+
 #
 # BETA!
 # explicitly specifying make -C target=all 
@@ -101,15 +137,15 @@ doc:
 	 $(MKDIR) $(TOP_DIR)/$(DOC_DIR) -p; \
 	 $(DOXYGEN) $(DOXYFILE); \
 	fi
-	$(MAKE) -C $(TOP_DIR)/$(DOC_DIR)/$(PDF_DIR) $(PDF_TARGET)
+	$(MAKE) $(MAKE_FLAGS) -C $(TOP_DIR)/$(DOC_DIR)/$(PDF_DIR) $(PDF_TARGET)
 
 build-dirs:
 	@$(MKDIR) -p $(TOP_DIR)/$(OBJ_DIR) $(TOP_DIR)/$(BIN_DIR) $(TOP_DIR)/$(LIB_DIR) $(TOP_DIR)/$(DOC_DIR)
 
 tags:
-	@$(FIND) $(TOP_DIR) -name *.[chS] | $(XARGS) -n1 $(CTAGS) $(CTAGS_OPTS)
+	$(FIND) $(TOP_DIR) -name *.[chS]* | $(GREP) -v ~$$ | $(XARGS) -n1 $(CTAGS) $(CTAGS_OPTS)
 
-.PHONY: clean doc tags
+.PHONY: clean doc tags mrproper
 
 .SILENT: $(SRC_SUBDIRS) clean tags
 
