minor rule changes to update flags and targets

--- a/user/src/test/Makefile
+++ b/user/src/test/Makefile
@@ -12,9 +12,11 @@ TEST_LIBS = -lbsys -lbdata -lbui
 LDFLAGS += -lm
 
 testsrc: $(TEST_SRCS)
-	$(CC) $(CFLAGS) $(LDFLAGS) $(TEST_LIBS) $(INCLUDES)  $< -o $(TOP_DIR)/$(BIN_DIR)/$(shell $(ECHO) $< | $(SED) s/\.c//)
+	$(CC) $(CFLAGS) $(LDFLAGS) $(TEST_LIBS) $(INCLUDES)  $< -o $(TOP_DIR)/$(BIN_DIR)/$(BINPREFIX)$(shell $(ECHO) $< | $(SED) s/\.c//)
 
 clean: $(TEST_SRCS)
 	@$(RM) -f $(TOP_DIR)/$(BIN_DIR)/$(shell $(ECHO) $< | sed s/\.c//)
 
 .PHONY: all clean testsrc
+
+# end of Makefile (test subdir)
