make configure works now

--- a/user/Makefile
+++ b/user/Makefile
@@ -6,6 +6,7 @@
 # Copyright (c) 2005-2012 Sunil Beta Baskar <betasam@gmail.com>
 #
 # CHANGELOG
+#	30-DEC-2010	make configure works now
 #	22-DEC-2010	Added DEBUG option for Makefile
 #	17-DEC-2010	Checked and updated for cross-compiling#
 #	08-DEC-2010	Fixed make -C issue
@@ -71,6 +72,9 @@ SED     = $(shell which sed)
 GREP    = $(shell which grep)
 endif
 
+CD      = cd
+
+
 # directories
 TOP_DIR=$(shell pwd)
 INCLUDE_DIR = include
@@ -81,6 +85,7 @@ BIN_DIR := bin
 LIB_DIR := lib
 DOC_DIR := doc
 PDF_DIR := latex
+BUILD_DIR := build
 
 # toolchain options
 CFLAGS = -O2 -Wall
@@ -93,6 +98,7 @@ TAGSFILE = $(TOP_DIR)/TAGS
 MAKE_FLAGS := -j1
 CTAGS_OPTS = -f $(TAGSFILE) -e -a
 PDF_TARGET := pdf
+CONFIG_HEADER := bkconfig.h
 
 ifeq ($(DEBUG),1)
 CFLAGS = -O0 -g -Wall
@@ -105,10 +111,10 @@ SUBVERSION =0.2
 # for all subdirectory makefiles
 export CC AR INCLUDES INCLUDE_DIR SRC_SUBDIRS OBJ_DIR BIN_DIR TOP_DIR CFLAGS SRC_DIR
 export LIB_DIR LIBFLAGS SHAREDLIB VERSION SUBVERSION LN LDFLAGS RM MKDIR FIND
-export ECHO SED BINPREFIX STRIP
+export ECHO BUILD_DIR SED BINPREFIX STRIP
 
 # targets
-all: $(SRC_SUBDIRS) tags
+all: dep $(SRC_SUBDIRS) tags
 
 clean: 
 	for D in $(SRC_SUBDIRS); do \
@@ -122,7 +128,13 @@ clean:
 	fi 
 
 mrproper: clean
+	$(RM) -f $(TOP_DIR)/$(INCLUDE_DIR)/$(CONFIG_HEADER)
 
+build-deps:
+	if [ ! -x $(TOP_DIR)/$(BUILD_DIR)/configure.pl ]; then \
+	echo "Error: Unresolved dependencies"; \
+	exit 2; \
+	fi
 #
 # BETA!
 # explicitly specifying make -C target=all 
@@ -132,6 +144,11 @@ mrproper: clean
 $(SRC_SUBDIRS):
 	$(MAKE) $(MAKE_FLAGS) -C $(TOP_DIR)/$(SRC_DIR)/$@ all
 
+dep: build-dirs build-deps
+
+configure:
+	$(CD) $(TOP_DIR)/$(BUILD_DIR) && ./configure.pl ../root.bconfig
+
 doc:
 	if [ -x $(DOXYGEN) ]; then \
 	 $(MKDIR) $(TOP_DIR)/$(DOC_DIR) -p; \
@@ -140,14 +157,15 @@ doc:
 	$(MAKE) $(MAKE_FLAGS) -C $(TOP_DIR)/$(DOC_DIR)/$(PDF_DIR) $(PDF_TARGET)
 
 build-dirs:
-	@$(MKDIR) -p $(TOP_DIR)/$(OBJ_DIR) $(TOP_DIR)/$(BIN_DIR) $(TOP_DIR)/$(LIB_DIR) $(TOP_DIR)/$(DOC_DIR)
+	@$(MKDIR) -p $(TOP_DIR)/$(OBJ_DIR) $(TOP_DIR)/$(BIN_DIR) $(TOP_DIR)/$(LIB_DIR) 
+	@$(MKDIR) -p $(TOP_DIR)/$(DOC_DIR) $(TOP_DIR)/$(DOC_DIR)/$(PDF_DIR)
 
 tags:
 	$(FIND) $(TOP_DIR) -name *.[chS]* | $(GREP) -v ~$$ | $(XARGS) -n1 $(CTAGS) $(CTAGS_OPTS)
 
-.PHONY: clean doc tags mrproper
+.PHONY: clean doc tags mrproper build-dirs build-deps configure
 
-.SILENT: $(SRC_SUBDIRS) clean tags
+.SILENT: $(SRC_SUBDIRS) clean tags build-dirs build-deps configure
 
 #
 # end of Top Makefile
