Makefile minor update to support jemalloc (specifically use -ljemalloc -lpthread -ldl hello.c now uses jemalloc if included in the bkit suite using make configure

--- a/user/src/test/Makefile
+++ b/user/src/test/Makefile
@@ -4,10 +4,16 @@
 # Description:	Beta's toolkit to simplify linux userspace apps.
 #
 
+include $(TOP_DIR)/$(CONFIG_FILE)
+
 all: testsrc
 
 TEST_SRCS = hello.c
 TEST_LIBS = -lbsys -lbdata -lbui
+
+ifeq ($(BK_SYS_JEMALLOC),y)
+TEST_LIBS += -ljemalloc -lpthread -ldl
+endif
 
 LDFLAGS += -lm
 
