updated libraries to be in correct link order for new ld

--- a/user/src/test/Makefile
+++ b/user/src/test/Makefile
@@ -9,7 +9,7 @@ include $(TOP_DIR)/$(CONFIG_FILE)
 all: testsrc
 
 TEST_SRCS = hello.c
-TEST_LIBS = -lbsys -lbdata -lbui
+TEST_LIBS = -lbsys -lbdata -lbui -lm
 
 ifeq ($(BK_SYS_JEMALLOC),y)
 TEST_LIBS += -ljemalloc -lpthread -ldl
@@ -18,7 +18,7 @@ endif
 LDFLAGS += -lm
 
 testsrc: $(TEST_SRCS)
-	$(CC) $(CFLAGS) $(LDFLAGS) $(TEST_LIBS) $(INCLUDES)  $< -o $(TOP_DIR)/$(BIN_DIR)/$(BINPREFIX)$(shell $(ECHO) $< | $(SED) s/\.c//)
+	$(CC) $(CFLAGS)  $(INCLUDES) $<  $(LDFLAGS) $(TEST_LIBS) -o $(TOP_DIR)/$(BIN_DIR)/$(BINPREFIX)$(shell $(ECHO) $< | $(SED) s/\.c//)
 
 clean: $(TEST_SRCS)
 	@$(RM) -f $(TOP_DIR)/$(BIN_DIR)/$(shell $(ECHO) $< | sed s/\.c//)
